# argocd-aws-keyspaces-tenant-generator-plugin

./: .gitignore  Cargo.toml  README.md
src/: main.rs
