[package]
name = "argocd-keyspaces-plugin"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Cassandra driver + AWS Keyspaces SigV4 auth
scylla = { version = "0.7", features = ["ssl"] }
scylla-aws-keyspaces-authenticator = "0.1"
aws-config = "1"


# TLS via OpenSSL (used by scylla driver)
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
lto = true
codegen-units = 1