[package]
name = "argocd-keyspaces-plugin"
version = "0.1.0"
edition = "2024"                 # or keep "2021" if you prefer

[dependencies]
# web + async
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
thiserror = "2"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cassandra / Keyspaces with modern driver + TLS
scylla = { version = "1.3.1", features = ["rustls-023"] }
rustls = "0.23"
rustls-pemfile = "2"                                      # if you want to load a PEM CA file

# (optional) fetch Keyspaces creds from AWS Secrets Manager using IRSA
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"

[profile.release]
lto = true
codegen-units = 1
